--- a/index.html
+++ b/index.html
@@ -6,27 +6,40 @@
 	<meta name="description" content="WAP Assignments">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pradip Acharya</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/styleme.css">
 </head>
 <body>
+	<!-- <header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="aboutme.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</header> -->
 	<img class="main-pic" src="images/pradip.jpg" alt="display-picture" />
 	<h1>Pradip Acharya</h1>
 	<ul>
 		<li>Lession 1
 			<ul>
-				<li><a href="#">Assignment 1</a></li>
+				<li><a href="#">Lab 1</a></li>
 			</ul>
 		</li>
-		<li>Lession 2</li>
+		<li>Lession 2
+			<ul>
+				<li><a href="aboutme.html">Lab 1</a></li>
+			</ul>
+		</li>
 		<li>Lession 3</li>
 		<li>Lession 4</li>
 		<li>Lession 5</li>
 	</ul>
 	<p> 
-   <a href="https://validator.w3.org/check/referer"> 
-      <img src="images/html5_validator.png" alt="Validate" /> 
-   </a>
-</p>
+	   <a href="https://validator.w3.org/check/referer"> 
+	      <img src="images/html5_validator.png" alt="Validate" /> 
+	   </a>
+	</p>
 
 </body>
 </html>
