Day Second edited

--- a/pie.html
+++ b/pie.html
@@ -108,6 +108,7 @@
 		<a href="#links">Search for other Lemon Meringue Pie recipe.</a><br>
 		<a href="#">Home</a>
 	</div>
+</div>
 	<div id="validator">
 	<p>
 	   <a href="https://validator.w3.org/check/referer"> 
@@ -124,6 +125,7 @@ Copyright &copy; 2012 Granny's Pies.
 		All rights reserved.
 	</pre>
 </div>
+
 
 	<div class="footer">
 		<footer>
