--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<li>Lession 2
 			<ul>
 				<li><a href="aboutme.html">Lab 1: About Me</a></li>
-				<li><a href="pie.html">Lab2 2: Granny's Pie</a></li>
+				<li><a href="pie.html">Lab 2: Granny's Pie</a></li>
 			</ul>
 		</li>
 		<li>Lession 3</li>
