--- a/recipe/pie.html
+++ b/recipe/pie.html
@@ -23,7 +23,7 @@
 	<div class="main-body">
 		<h1 id="pie">Grandma's Lemon Meringue Pie</h1>
 		<div class="pie-image">
-			<img src="images/recipe_images/pie.jpg" alt="pie-image">
+			<img src="images/pie.jpg" alt="pie-image">
 		<p>
 		One 9-inch pie<br>
 		30 Min - Prep time<br>
@@ -37,16 +37,16 @@
 			<h1>INGREDENDS</h1>
 			<ul>
 				<li> 1 cup white sugar</li>
-				<li>2<abbr title="tablespoons">tbsp</abbr>all-purpose flour</li>
-				<li>3<abbr title="teaspoon">tbsp</abbr>cornstarch</li>
+				<li>2<abbr title="tablespoon">tbsp</abbr>all-purpose flour</li>
+				<li>3<abbr title="tablespoon">tbsp</abbr>cornstarch</li>
 				<li> 1/4<abbr title="teaspoon">tsp</abbr>salt</li>
 				<li>1 1/2 cups water</li>
 				<li>2 lemons, juiced and zested</li>
-				<li>2<abbr title="teaspoon">tbsp</abbr>butter</li>
+				<li>2<abbr title="tablespoon">tbsp</abbr>butter</li>
 				<li>4 egg yolks, beaten</li>
 				<li>1 (9 inch) pie crust, baked</li>
 				<li>4 egg whites</li>
-				<li>6<abbr title="teaspoon">tbsp</abbr>white sugar</li>
+				<li>6<abbr title="tablespoon">tbsp</abbr>white sugar</li>
 			</ul>
 		</div>
 		<hr>
@@ -56,7 +56,7 @@
 				<li>Preheat Oven: Preheat oven to 350 degrees F (175 degrees C).</li>
 				<li>Make Lemon Filling: In a medium saucepan ...
 					<ul>
-						<li>        Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+						<li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
 						<li>Stir in water, lemon juice and lemon zest.</li>
 						<li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
 						<li>Stir in butter.</li>
