--- a/recipe/pie.html
+++ b/recipe/pie.html
@@ -5,8 +5,10 @@
 	<meta name="author" content="Pradip Acharya">
 	<meta name="description" content="WAP Assignments">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="images/pie_icon.gif" type="image/gif" sizes="16x16">
 	<title>Grandma's Recipe</title>
 	<link rel="stylesheet" type="text/css" href="css/recipe.css">
+
 </head>
 <body>
 	<div class="header">
