--- a/movie-review/tmnt.html
+++ b/movie-review/tmnt.html
@@ -2,11 +2,11 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8"/>
 
 	
 
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<title>TMNT - Rancid Tomatoes</title>
 
 	<meta name="description" content="tmnt page" />
@@ -15,7 +15,6 @@
 
 	<link rel="icon" href="images/rotten.gif" type="image/gif" sizes="16x16">
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/movie.css">
 </head>
 
@@ -33,7 +32,8 @@
 					<span class="rating-txt">33%</span>
 				</section>
 				<section class="clear mt-10">
-					<div class="left-column"><p class="comment-box mb-10">
+					<div class="left-column">
+					<p class="comment-box mb-10">
 						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
 						<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
 					</p>
