--- a/movie-review/tmnt.html
+++ b/movie-review/tmnt.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8"/>
 
-		<title>TMNT - Rancid Tomatoes</title>
+	<title>TMNT - Rancid Tomatoes</title>
 
 	<meta name="description" content="tmnt page" />
 	<meta name="keywords" content="wap assignments4" />
@@ -25,170 +25,170 @@
 		<div class="inner-container">
 			<div class="left-aside">
 				<section>
-					<img src="images/rottenbig.png" alt="rottenbig.png">
+					<img src="images/rottenbig.png" alt="rottenbig.png"/>
 					<span class="rating-txt">33%</span>
 				</section>
 				<section class="clear mt-10">
 					<div class="left-column">
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Peter Debruge <br>
-						<span class="cretic-name">Variety</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/fresh.gif" alt="Fresh">
-						<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Todd Gilchrist <br>
-						<span class="cretic-name">IGN Movies</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>It stinks!</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Jay Sherman (unemployed)
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Joshua Tyler <br>
-						<span class="cretic-name">CinemaBlend.com</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>It's nice movie!</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						NAME <br>
-						<span class="cretic-name">PUBLICATION</span>
-					</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Peter Debruge <br>
+							<span class="cretic-name">Variety</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/fresh.gif" alt="Fresh"/>
+							<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Todd Gilchrist <br>
+							<span class="cretic-name">IGN Movies</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>It stinks!</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Jay Sherman (unemployed)
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Joshua Tyler <br>
+							<span class="cretic-name">CinemaBlend.com</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>It's nice movie!</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							NAME <br>
+							<span class="cretic-name">PUBLICATION</span>
+						</p>
+					</div>
+					<div class="left-column">
+
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Jeannette Catsoulis <br>
+							<span class="cretic-name">New York Times</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Ed Gonzalez <br>
+							<span class="cretic-name">Slant Magazine</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/fresh.gif" alt="Fresh"/>
+							<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Mark Palermo <br>
+							<span class="cretic-name">Coast (Halifax, Nova Scotia)</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							Steve Rhodes <br>
+							<span class="cretic-name">Internet Reviews</span>
+						</p>
+						<p class="comment-box mb-10">
+							<img class="txt-img" src="images/rotten.gif" alt="Rotten"/>
+							<q>Not bad!</q>
+						</p>
+						<p class="cretic reviews-space">
+							<img class="txt-img" src="images/critic.gif" alt="Critic"/>
+							NAME <br>
+							<span class="cretic-name">PUBLICATION</span>
+						</p>
+					</div>
+
+				</section>
+
+			</div>
+			<div class="right-nav right-bg">
+				<img src="images/overview.png" alt="overview.png"/>
+				<div class="desc">
+					<dl>
+						<dt>STARRING</dt>
+						<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
+
+						<dt>DIRECTOR</dt>
+						<dd>Kevin Munroe</dd>
+
+						<dt>RATING</dt>
+						<dd>PG</dd>
+
+						<dt>THEATRICAL RELEASE</dt>
+						<dd>Mar 23, 2007</dd>
+
+						<dt>MOVIE SYNOPSIS</dt>
+						<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
+
+						<dt>MPAA RATING</dt>
+						<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+
+						<dt>RELEASE COMPANY</dt>
+						<dd>Warner Bros.</dd>
+
+						<dt>RUNTIME</dt>
+						<dd>90 mins</dd>
+
+						<dt>GENRE</dt>
+						<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
+
+						<dt>BOX OFFICE</dt>
+						<dd>$54,132,596</dd>
+
+						<dt>LINKS</dt>
+						<dd>
+							<ul style="list-style: none;">
+								<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
+								<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
+								<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
+								<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
+							</ul>
+						</dd>
+					</dl>
 				</div>
-				<div class="left-column">
-
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Jeannette Catsoulis <br>
-						<span class="cretic-name">New York Times</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Ed Gonzalez <br>
-						<span class="cretic-name">Slant Magazine</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/fresh.gif" alt="Fresh">
-						<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Mark Palermo <br>
-						<span class="cretic-name">Coast (Halifax, Nova Scotia)</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						Steve Rhodes <br>
-						<span class="cretic-name">Internet Reviews</span>
-					</p>
-					<p class="comment-box mb-10">
-						<img class="txt-img" src="images/rotten.gif" alt="Rotten">
-						<q>Not bad!</q>
-					</p>
-					<p class="cretic reviews-space">
-						<img class="txt-img" src="images/critic.gif" alt="Critic">
-						NAME <br>
-						<span class="cretic-name">PUBLICATION</span>
-					</p>
-				</div>
-
-			</section>
-
-		</div>
-		<div class="right-nav right-bg">
-			<img src="images/overview.png" alt="overview.png">
-			<div class="desc">
-				<dl>
-					<dt>STARRING</dt>
-					<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
-
-					<dt>DIRECTOR</dt>
-					<dd>Kevin Munroe</dd>
-
-					<dt>RATING</dt>
-					<dd>PG</dd>
-
-					<dt>THEATRICAL RELEASE</dt>
-					<dd>Mar 23, 2007</dd>
-
-					<dt>MOVIE SYNOPSIS</dt>
-					<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
-
-					<dt>MPAA RATING</dt>
-					<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
-
-					<dt>RELEASE COMPANY</dt>
-					<dd>Warner Bros.</dd>
-
-					<dt>RUNTIME</dt>
-					<dd>90 mins</dd>
-
-					<dt>GENRE</dt>
-					<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
-
-					<dt>BOX OFFICE</dt>
-					<dd>$54,132,596</dd>
-
-					<dt>LINKS</dt>
-					<dd>
-						<ul style="list-style: none;">
-							<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-							<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
-							<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
-							<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
-						</ul>
-					</dd>
-				</dl>
 			</div>
 		</div>
+		<div class="clear right-bg text-center" style="border-radius: 0px 0px 17px 17px;padding: 5px;text-align: center;">
+			(1-10) of 88
+		</div>
 	</div>
-	<div class="clear right-bg text-center" style="border-radius: 0px 0px 17px 17px;padding: 5px;text-align: center;">
-		(1-10) of 88
+	<div class="validator-section">
+		<p> 
+			<a href="https://validator.w3.org/check/referer"> 
+				<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate" /> 
+			</a>
+			<br/>
+			<a href="https://jigsaw.w3.org/css-validator/check/referer"> 
+				<img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate" /> 
+			</a>
+		</p>
 	</div>
-</div>
-<div class="validator-section">
-	<p> 
-		<a href="https://validator.w3.org/check/referer"> 
-			<img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate" /> 
-		</a>
-		<br/>
-		<a href="https://jigsaw.w3.org/css-validator/check/referer"> 
-			<img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate" /> 
-		</a>
-	</p>
-</div>
 
 </body>
 </html>
