--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
 		<li>Lession 2
 			<ul>
 				<li><a href="aboutme.html">Lab 1: About Me</a></li>
-				<li><a href="recipe/pie.html">Assignment 1: Granny's Pie</a></li>
+				<li><a href="recipe/pie.html">Lab 2: Granny's Pie</a></li>
 			</ul>
 		</li>
-		<li>Lession 3</li>
+		<li>Lession 3
 			<ul>
-				<li><a href="movie-review/tmnt.html">Assignment 2: Movie Review</a></li>
+				<li><a href="movie-review/tmnt.html">Lab 3: Movie Review</a></li>
 			</ul>
-		<li>Lession 4</li>
+		</li>
+		<li>Lession 4
+			<ul>
+				<li><a href="form/checkout-form.html">Assignment 4: HTML Form</a></li>
+			</ul>
+
+		</li>
 		<li>Lession 5</li>
 	</ul>
 	<p> 
