--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
 		</li>
 		<li>Lession 4
 			<ul>
-				<li><a href="form/checkout-form.html">Assignment 4: HTML Form</a></li>
+				<li><a href="form/checkout-form.html">Lab 4: HTML Form</a></li>
 			</ul>
 
 		</li>
-		<li>Lession 5</li>
+		<li>Lession 5:JavaScript
+			<ul>
+				<li><a href="js-assignment/lab-1/tip.html">Lab 5: Tip Calulator</li>
+				<li><a href="js-assignment/lab-2/decoratemytext.html">Lab 6: Decorate MyText</li>
+			</ul>
+		</li>
 	</ul>
 	<p> 
 	   <a href="https://validator.w3.org/check/referer"> 
