--- a/form/checkout-form.html
+++ b/form/checkout-form.html
@@ -37,7 +37,7 @@
 						<legend>Payment Information</legend>
 						<table>
 							<tr><td><label>Country</label></td>
-								<td><select name="Country">
+								<td><select name="country">
 									<option value="usa" selected>USA</option>
 									<option value="canada">Canada</option>
 									<option value="japan">Japan</option>
