--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
 			</ul>
 
 		</li>
-		<li>Lession 5:JavaScript
+		<li>Lession 5:JavaScript Basic
 			<ul>
 				<li><a href="js-assignment/lab-1/tip.html">Lab 5: Tip Calulator</li>
 				<li><a href="js-assignment/lab-2/decoratemytext.html">Lab 6: Decorate MyText</li>
+				<li><a href="js-assignment/lab-3/ascii.html">ASCIImation</a></li>
 			</ul>
 		</li>
+		
 	</ul>
 	<p> 
 	   <a href="https://validator.w3.org/check/referer"> 
