--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
 			<ul>
 				<li><a href="js-assignment/lab-1/tip.html">Lab 5: Tip Calulator</li>
 				<li><a href="js-assignment/lab-2/decoratemytext.html">Lab 6: Decorate MyText</li>
+				
+			</ul>
+		</li>
+		<li>Lession 6: Javascript Programming Environment
+			<ul>
 				<li><a href="js-assignment/lab-3/ascii.html">ASCIImation</a></li>
+			</ul>
+			
+		</li>
+		<li>
+			Lession 7
+			<ul>
+				<li><a href="js-assignment/lab-4/account.html">Modules: Create Account</a></li>
 			</ul>
 		</li>
 		
