--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 				<li><a href="js-assignment/lab-4/account.html">Modules: Create Account</a></li>
 			</ul>
 		</li>
+		<li>
+			Lession 8
+			<ul>
+				<li><a href="js-assignment/lab-5/bikea.html">Bicycle: A</a></li>
+				<li><a href="js-assignment/lab-5/bikea.html">Bicycle: B</a></li>
+			</ul>
+		</li>
 		
 	</ul>
 	<p> 
