--- a/index.html
+++ b/index.html
@@ -43,30 +43,38 @@
 			</ul>
 
 		</li>
-		<li>Lession 5:JavaScript Basic
+		<li>
+			Lession 5:JavaScript Basic
 			<ul>
 				<li><a href="js-assignment/lab-1/tip.html">Lab 5: Tip Calulator</li>
-				<li><a href="js-assignment/lab-2/decoratemytext.html">Lab 6: Decorate MyText</li>
+				<li><a href="js-assignment/lab-2/decoratemytext.html">Lab 6: Decorate MyText</a></li>
 				
 			</ul>
 		</li>
-		<li>Lession 6: Javascript Programming Environment
+		<li>
+			Lession 6: Javascript Programming Environment
 			<ul>
 				<li><a href="js-assignment/lab-3/ascii.html">ASCIImation</a></li>
 			</ul>
-			
 		</li>
 		<li>
-			Lession 7
+			Lession 7:this_Closures
 			<ul>
-				<li><a href="js-assignment/lab-4/account.html">Modules: Create Account</a></li>
+				<li><a href="js-assignment/lab-4/account.html">Modules:Create Account</a></li>
 			</ul>
 		</li>
 		<li>
-			Lession 8
+			Lession 8:Inheritence
 			<ul>
 				<li><a href="js-assignment/lab-5/bikea.html">Bicycle: A</a></li>
 				<li><a href="js-assignment/lab-5/bikea.html">Bicycle: B</a></li>
+			</ul>
+		</li>
+			<li>
+			Lession 9:jQuery
+			<ul>
+				<li><a href="js-assignment/jQuery/puzzle_resources/fifteen.html">Puzzle Solving</a></li>
+			
 			</ul>
 		</li>
 		
