--- a/index.html
+++ b/index.html
@@ -70,10 +70,17 @@
 				<li><a href="js-assignment/lab-5/bikea.html">Bicycle: B</a></li>
 			</ul>
 		</li>
-			<li>
+		<li>
 			Lession 9:jQuery
 			<ul>
 				<li><a href="js-assignment/jQuery/puzzle_resources/fifteen.html">Puzzle Solving</a></li>
+			
+			</ul>
+		</li>
+		<li>
+			Lession 10:AJAX
+			<ul>
+				<li><a href="js-assignment/ajax/index.html">Ajax 1</a></li>
 			
 			</ul>
 		</li>
