--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 			Lession 10:AJAX
 			<ul>
 				<li><a href="js-assignment/ajax/index.html">Ajax 1</a></li>
+				<li><a href="js-assignment/json/json-assignment.html">JSON </a></li>
 			
 			</ul>
 		</li>
